--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,16 @@
 {
-  "name": "artemplatonov",
-  "description": "",
-  "main": "index.js",
-  "license": "MIT",
-  "moduleType": [],
-  "homepage": "",
+  "name": "polymer-starter-kit",
   "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
   "dependencies": {
-    "polymer": "~1.2.3",
-    "bootstrap": "~3.3.6",
-    "async-gist": "~1.0.1"
-  }
+    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "page": "visionmedia/page.js#~1.6.4",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.1",
+    "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
+    "polymer": "Polymer/polymer#^1.2.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "^4.0.0"
+  },
+  "ignore": []
 }
